# platformer-project

./: CMakeLists.txt  Game.md  assets.h  enemies_controller.cpp  enemies_controller.h  enemy.cpp  enemy.h  globals.h  graphics.h  level.h  level_controller.cpp  level_controller.h  platformer.cpp  player.cpp  player.h
